--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="col-4">
-                    <h2>“Principia is literally the best compendioum of knowledge I have ever read in my whole entire life”</h2>
+                    <h2>“Principia is literally the best compendium of knowledge I have ever read in my whole entire life”</h2>
                 </div>
             </div>
 
