--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         Unlock the power of data science and ai to solve real-world problems and drive innovation in a variety of fields ranging from Math and Computer Science to Psychology and Linguistics, discover the limitless potential of this rapidly growing field and stay at the forefront of the latest trends and developments with in-depth articles and interviews from industry experts.
                     </p>
                     <br>
-                    <button class="cybr-btn" onclick="window.location = 'https://online.fliphtml5.com/ctjcu/eraf/'">
+                    <button class="cybr-btn" onclick="window.location = 'https://online.fliphtml5.com/ctjcu/qnfd/'">
                         Read Now<span aria-hidden>_</span>
                         <span aria-hidden class="cybr-btn__glitch">Read Now</span>
                     </button>
